--- a/app/views/home.html.twig
+++ b/app/views/home.html.twig
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Accueil</title>
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    <h1>Accueil</h1>
-    <p>
-        <a href="index.php?controller=starships&action=index">Liste des vaisseaux</a>
-    </p>
-    <p>
-        <a href="index.php?controller=user&action=connect">Se connecter</a>
-    </p>
+    <header>
+        <h1>Star Citizen</h1>
+        <nav>
+            <ul>
+                <li><a href="index.php?controller=starships&action=index">Liste des vaisseaux</a></li>
+                {% if user %}
+                    <li><a href="index.php?controller=users&action=logout">Déconnexion</a></li>
+                {% else %}
+                    <li><a href="index.php?controller=users&action=login">Connexion</a></li>
+                    <li><a href="index.php?controller=users&action=register">Inscription</a></li>
+                {% endif %}
+            </ul>
+            {# <p>Bonjour {{ user.username }}</p> #}
+            <p>{{dump(user)}}</p>
+        </nav>
+    </header>
 </body>
