--- a/app/views/user_login.html.twig
+++ b/app/views/user_login.html.twig
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
+    <a href="index.php">Retour à l'accueil</a>
     <h1>Login</h1>
     <form action="index.php?controller=users&action=authenticate" method="post">
         <label for="email">Email</label>
@@ -16,6 +17,9 @@
         <input type="password" name="confirm_password" id="confirm_password" required>
         <input type="submit" value="Se connecter">
     </form>
+    {% if error %}
+        <p>{{ error }}</p>
+    {% endif %}
     <p>Pas encore de compte ? <a href="index.php?controller=users&action=register">S'inscrire</a></p>
 </body>
 </html>
