--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,60 @@
-body{
-    /* background-color: red; */
-}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 20px;
+  }
+
+  h1 {
+    color: #333;
+  }
+
+  a {
+    color: #0066cc;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  ul.nav {
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  ul li {
+    margin-bottom: 10px;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    background: rgb(2,0,36);
+    background: linear-gradient(142deg, rgba(2,0,36,0.2511379551820728) 0%, rgba(9,22,121,0.25) 29%, rgba(0,80,255,0.25) 100%);
+  }
+
+  table, th, td {
+    border: 1px solid #ccc;
+  }
+
+  th, td {
+    padding: 10px;
+    text-align: center;
+  }
+
+  th {
+    background-color: #f0f0f0;
+  }
+
+  p {
+    line-height: 1.5;
+  }
